# nomwatch

./: .gitignore  OPUS_WEBAPP_PROMPT.md  README.md  pyproject.toml
.github/workflows/: test.yml
.obsidian/: workspace.json
docs/: ARCHITECTURE.md  GOOGLE_DRIVE_SETUP.md  OPERATOR_GUIDE.md  ROADMAP.md  SECURITY_FAQ.md  TAILSCALE_INTEGRATION.md  UI_SPEC.md
docs/adr/: 0001-local-first-host-and-private-remote-access.md
nomwatch/: auth.py  bridge.py  cli.py  clip.py  config.py  control.py  detection.py  gateway.py  host.py  jobs.py  macapp.py  migration.py  monitorlock.py  network.py  notify.py  paths.py  recovery.py  runctl.py  service.py  state.py  storage.py  supervisor.py  tailscale.py  tailscale_helper.py  websecurity.py  webui.py
nomwatch-0.4.0/: LICENSE  README.md  pyproject.toml
nomwatch-0.4.0/nomwatch/: cli.py  detection.py  notify.py
packaging/macos/: com.nomwatch.host.plist.in
packaging/systemd/: nomwatch-tailscale-helper.service  nomwatch.service
scripts/: simulate_poll.py  test_image.py
tests/: test_detection_rearm.py  test_host_runtime.py  test_lan_gateway.py  test_local_state_auth.py  test_recovery_packaging.py  test_tailscale.py  test_web_security.py
