[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nomwatch"
version = "0.2.0.dev0"
description = "Free, open-source, privacy-first camera bridge that turns any LAN camera into a smart pet feeder monitor."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
authors = [
    { name = "Leo Goldberg" }
]
dependencies = [
    "pyyaml>=6.0",
    "click>=8.1",
    "requests>=2.31",
]

[project.optional-dependencies]
drive = ["google-api-python-client>=2.100", "google-auth-oauthlib>=1.1"]
detect = ["ultralytics>=8.0"]

[project.scripts]
nomwatch = "nomwatch.cli:main"

[tool.setuptools.packages.find]
include = ["nomwatch*"]
