[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nomwatch"
version = "0.4.0"
description = "Free, open-source, privacy-first camera bridge that turns any LAN camera into a smart pet feeder monitor."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
authors = [
    { name = "Leo Goldberg" }
]
keywords = ["pet", "camera", "rtsp", "tailscale", "ollama", "home-automation", "privacy"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Topic :: Home Automation",
    "Topic :: Multimedia :: Video :: Capture",
]
dependencies = [
    "pyyaml>=6.0",
    "click>=8.1",
    "requests>=2.31",
]

[project.urls]
Homepage = "https://github.com/yogoldy/nomwatch"
Repository = "https://github.com/yogoldy/nomwatch"
Issues = "https://github.com/yogoldy/nomwatch/issues"

[project.optional-dependencies]
drive = ["google-api-python-client>=2.100", "google-auth-oauthlib>=1.1"]
detect = ["ultralytics>=8.0"]
ui = ["flask>=3.0"]
# Native macOS menu-bar app (`nomwatch app`). macOS-only; pure pyobjc, no
# Electron/web-wrapper. See nomwatch/macapp.py.
app = [
    "pyobjc-core>=10; sys_platform == 'darwin'",
    "pyobjc-framework-Cocoa>=10; sys_platform == 'darwin'",
    "pyobjc-framework-ServiceManagement>=10; sys_platform == 'darwin'",
]

[project.scripts]
nomwatch = "nomwatch.cli:main"

[tool.setuptools.packages.find]
include = ["nomwatch*"]
