[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nomwatch"
dynamic = ["version"]
description = "Free, open-source, privacy-first camera bridge that turns any LAN camera into a smart pet feeder monitor."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
authors = [
    { name = "Leo Goldberg" }
]
keywords = ["pet", "camera", "rtsp", "tailscale", "ollama", "home-automation", "privacy"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Topic :: Home Automation",
    "Topic :: Multimedia :: Video :: Capture",
]
dependencies = [
    "pyyaml>=6.0",
    "click>=8.1",
    "requests>=2.31",
    "flask>=3.0",
    "waitress>=3.0",
    "argon2-cffi>=23.1",
    "zeroconf>=0.147",
    "qrcode[pil]>=8.2",
]

[project.urls]
Homepage = "https://github.com/yogoldy/nomwatch"
Repository = "https://github.com/yogoldy/nomwatch"
Issues = "https://github.com/yogoldy/nomwatch/issues"

[project.optional-dependencies]
drive = ["google-api-python-client>=2.100", "google-auth-oauthlib>=1.1"]
detect = ["ultralytics>=8.0"]
ui = []

[project.scripts]
nomwatch = "nomwatch.cli:main"

[tool.setuptools.dynamic]
version = {attr = "nomwatch.__version__"}

[tool.setuptools.packages.find]
include = ["nomwatch*"]

[tool.setuptools.package-data]
nomwatch = ["static/*"]
